[tool.poetry]
name = "AstroBot"
version = "0.1.0"
description = "A Discord Bot."
authors = ["Asmaa Taj El-Dein"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
requests = "^2.26.0"
python-dotenv = "^0.19.1"
emoji = "^1.6.1"
python-dateutil = "^2.8.2"
black = "^23.9.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
